提交gitignore文件的生成方法

--- a/文档.md
+++ b/文档.md
@@ -158,18 +158,30 @@ reuseExistingChunk: true
 使用
 const ExtractTextPlugin = require("extract-text-webpack-plugin");
 module.exports = {
-  module: {
-    rules: [
-      {
-        test: /\.css$/,
-        use: ExtractTextPlugin.extract({
-          fallback: "style-loader",
-          use: "css-loader"
-        })
-      }
-    ]
-  },
-  plugins: [
-    new ExtractTextPlugin("styles.css"),
-  ]
+module: {
+rules: [
+{
+test: /\.css$/,
+use: ExtractTextPlugin.extract({
+fallback: "style-loader",
+use: "css-loader"
+})
 }
+]
+},
+plugins: [
+new ExtractTextPlugin("styles.css"),
+]
+}
+
+##gitignore 文件
+
+1、在需要创建 .gitignore 文件的文件夹, 右键选择 Git Bash 进入命令行，进入项目所在目录。
+
+2、输入 touch .gitignore ，生成“.gitignore”文件。
+3、在”.gitignore” 文件里输入你要忽略的文件夹及其文件就可以了。（注意格式）
+
+我的 .gitignore：
+
+.deploy_git/
+node_modules/
